# RhIO

./: .gitignore  BUILD.bazel  BaseNode.hpp  CMakeLists.txt  IONode.cpp  IONode.hpp  README.md  RhIO.cpp  RhIO.hpp  RhIOClient.hpp  Value.hpp  ValueNode.cpp  ValueNode.hpp  deps.json  install-zmq.sh  package.xml  wks.yml
Backup/: CMakeLists.txt
Client/: CMakeLists.txt  ClientReq.cpp  ClientReq.hpp  ClientSub.cpp  ClientSub.hpp  Node.cpp  Node.h  package.xml
Client/include/: RhIOClient.hpp
Client/include/rhio_client/: ClientReq.hpp  ClientSub.hpp
Client/src/: ClientReq.cpp  ClientReq.hpp  ClientSub.cpp  ClientSub.hpp  RhIOClient.hpp
Common/: CMakeLists.txt  DataBuffer.cpp  DataBuffer.hpp  Protocol.hpp  package.xml
Common/include/rhio_common/: Frame.hpp  Protocol.hpp  Stream.hpp
Common/src/: DataBuffer.cpp  DataBuffer.hpp  Frame.hpp  Protocol.cpp  Protocol.hpp  Stream.hpp  Value.hpp
Demo/: CMakeLists.txt  main.cpp
Docs/: RhioOnRhobanRobots.md  api.md  binding.md  getting_started.md  how_does_it_works.md  joypad.md  shell.md
Examples/: exampleBind.cpp  exampleFrames.cpp  exampleIntro.cpp  exampleValues.cpp  pad.json
Server/: BaseNode.hpp  Bind.cpp  Bind.hpp  BindFunction.hpp  CMakeLists.txt  CommandNode.cpp  CommandNode.hpp  Filesystem.cpp  Filesystem.hpp  Frame.hpp  FrameNode.cpp  FrameNode.hpp  IONode.cpp  IONode.hpp  RhIO.cpp  RhIO.hpp  ServerPub.cpp  ServerPub.hpp  ServerRep.cpp  ServerRep.hpp  Stream.cpp  Stream.hpp  StreamNode.cpp  StreamNode.hpp  Value.hpp  ValueNode.cpp  ValueNode.hpp  package.xml
Server/Examples/: CMakeLists.txt  exampleBind.cpp  exampleFrames.cpp  exampleIntro.cpp  exampleStreamsAndCommands.cpp  exampleValues.cpp
Server/include/: RhIO.hpp
Server/include/rhio_server/: Bind.hpp  CommandNode.hpp  FrameNode.hpp  IONode.hpp  RhIO.hpp  ServerPub.hpp  ServerRep.hpp  StreamNode.hpp  ValueNode.hpp
Server/src/: BaseNode.hpp  Bind.cpp  Bind.hpp  BindFunction.hpp  CommandNode.cpp  CommandNode.hpp  Filesystem.cpp  Filesystem.hpp  FrameNode.cpp  FrameNode.hpp  IONode.cpp  IONode.hpp  LockFreeDoubleQueue.hpp  RhIO.cpp  RhIO.hpp  ServerPub.cpp  ServerPub.hpp  ServerRep.cpp  ServerRep.hpp  Stream.cpp  StreamNode.cpp  StreamNode.hpp  ValueNode.cpp  ValueNode.hpp  autostart.cpp
Shell/: CMakeLists.txt  CSV.cpp  CSV.h  CdCommand.cpp  Client.h  Command.cpp  Command.h  Completion.cpp  Completion.h  Curse.cpp  Curse.h  FrameStreamViewer.cpp  FrameStreamViewer.hpp  GnuPlot.cpp  GnuPlot.h  HelpCommand.cpp  HelpCommand.h  LsCommand.cpp  LsCommand.h  Node.cpp  Node.h  NodePool.cpp  NodePool.h  Shell.cpp  Shell.h  Stream.cpp  Stream.h  StreamManager.cpp  StreamManager.h  Terminal.cpp  Terminal.h  TuneCommand.cpp  TuneCommand.h  Values.cpp  Values.h  main.cpp  package.xml  utils.h
Shell/commands/: CatCommand.cpp  CdCommand.cpp  CdCommand.h  ClearCommand.cpp  ClearCommand.h  Command.cpp  Command.h  DelayCommand.cpp  DiffCommand.cpp  DiffCommand.h  HelpCommand.cpp  HelpCommand.h  LoadCommand.cpp  LoadCommand.h  LogCommand.cpp  LogCommand.h  LogImgCommand.cpp  LsCommand.cpp  PadCommand.cpp  PadCommand.h  Plot2DCommand.cpp  Plot2DCommand.h  Plot3DCommand.h  PlotCommand.cpp  PlotCommand.h  RemoteCommand.cpp  RemoteCommand.h  RepeatCommand.cpp  SaveCommand.cpp  SaveCommand.h  SyncCommand.cpp  SyncCommand.h  TreeCommand.cpp  TreeCommand.h  TuneCommand.cpp  ViewCommand.cpp  ViewCommand.h  WatchCommand.cpp  WatchCommand.h
Shell/joystick/: Joystick.cpp  Joystick.h
Shell/jsoncpp/: .gitignore  CMakeLists.txt  README.txt
Shell/jsoncpp/cmake/: CMakeLists.txt  JsonCppConfig.cmake.in
Shell/jsoncpp/include/: CMakeLists.txt
Shell/jsoncpp/src/: CMakeLists.txt
Shell/jsoncpp/src/jsontestrunner/: CMakeLists.txt
Shell/jsoncpp/src/lib_json/: CMakeLists.txt
Shell/jsoncpp/src/test_lib_json/: CMakeLists.txt
Shell/jsoncpp/test/: CMakeLists.txt  rununittests.py
Shell/src/: CSV.cpp  CSV.h  Client.h  Completion.cpp  Completion.h  Curse.cpp  Curse.h  FrameStreamViewer.cpp  FrameStreamViewer.hpp  GnuPlot.cpp  GnuPlot.h  Node.cpp  Node.h  NodePool.cpp  NodePool.h  Shell.cpp  Shell.h  StreamManager.cpp  StreamManager.h  Terminal.cpp  Terminal.h  main.cpp  utils.h
Shell/src/commands/: CatCommand.cpp  CatCommand.h  CdCommand.cpp  CdCommand.h  ClearCommand.cpp  ClearCommand.h  Command.cpp  Command.h  DelayCommand.cpp  DelayCommand.h  DiffCommand.cpp  DiffCommand.h  ErrCommand.cpp  ErrCommand.h  HelpCommand.cpp  HelpCommand.h  LoadCommand.cpp  LoadCommand.h  LogCommand.cpp  LogCommand.h  LogImgCommand.cpp  LogImgCommand.h  LsCommand.cpp  LsCommand.h  PadCommand.cpp  PadCommand.h  Plot2DCommand.cpp  Plot2DCommand.h  Plot3DCommand.cpp  Plot3DCommand.h  PlotCommand.cpp  PlotCommand.h  RemoteCommand.cpp  RemoteCommand.h  RepeatCommand.cpp  RepeatCommand.h  SaveCommand.cpp  SaveCommand.h  SyncCommand.cpp  SyncCommand.h  (+8 more)
Shell/src/joystick/: Joystick.cpp  Joystick.h
Skeleton/: CMakeLists.txt  README.md  main.cpp
Tests/: CMakeLists.txt  package.xml  testBind.cpp  testClient.cpp  testClientReq.cpp  testClientSub.cpp  testCommands.cpp  testImgs.cpp  testPersistLoad.cpp  testPersistSave.cpp  testServer.cpp  testServerPub.cpp  testServerRep.cpp  testServerStress.cpp  testThreadSafeTree.cpp  testThreadSafeValue.cpp  testThreadSafeValueUpdate.cpp  testTree.cpp  testValue.cpp
Tests/src/: benchValues.cpp  testBind.cpp  testClientHighFreq.cpp  testClientReq.cpp  testClientSub.cpp  testCommands.cpp  testImgs.cpp  testPersistLoad.cpp  testPersistSave.cpp  testServer.cpp  testServerHighFreq.cpp  testServerPub.cpp  testServerRep.cpp  testServerStress.cpp  testThreadSafeTree.cpp  testThreadSafeValue.cpp  testThreadSafeValueUpdate.cpp  testTree.cpp  testValue.cpp
contrib/: zmq.hpp
include/: RhIO.hpp
scripts/: requirements.sh
