<?xml version="1.0"?>
<package>
  <name>RhIOShell</name>
  <version>0.0.0</version>
  <description>
    RhIOShell provide a shell environment to communicate with RhIOServers
  </description>

  <maintainer email="qrouxel@labri.fr">Quentin Rouxel</maintainer>
  <maintainer email="gpassault@labri.fr">Grégoire Passault</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/Rhoban/RhIO</url>

  <author email="qrouxel@labri.fr">Quentin Rouxel</author>
  <author email="gpassault@labri.fr">Grégoire Passault</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>RhIOClient</build_depend>
  <build_depend>jsoncpp</build_depend> <!-- git@github.com:RhobanDeps/jsoncpp.git -->

  <run_depend>RhIOClient</run_depend>
  <run_depend>jsoncpp</run_depend>


</package>
