<?xml version="1.0"?>
<package>
  <name>rhio_shell</name>
  <version>0.0.0</version>
  <description>
    RhIOShell provide a shell environment to communicate with RhIOServers
  </description>

  <maintainer email="qrouxel@labri.fr">Quentin Rouxel</maintainer>
  <maintainer email="gpassault@labri.fr">Grégoire Passault</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/Rhoban/RhIO</url>

  <author email="qrouxel@labri.fr">Quentin Rouxel</author>
  <author email="gpassault@labri.fr">Grégoire Passault</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>uoe_zmq</build_depend>
  <build_depend>rhio_client</build_depend>

  <run_depend>uoe_zmq</run_depend>
  <run_depend>rhio_client</run_depend>


</package>
